# aquaview-py

./: README.md  pyproject.toml
aquaview/: README.md  __init__.py  client.py  exceptions.py  utils.py
aquaview/endpoints/: __init__.py  cdm_data_types.py  datasets.py  keywords.py  preview.py  sources.py
tests/: test_connect.py
